fixup 45444b9 fix register button spacing

--- a/src/adhocracy/static_src/stylesheets/components/_button.scss
+++ b/src/adhocracy/static_src/stylesheets/components/_button.scss
@@ -9,6 +9,7 @@
         color: #fff;
         line-height: 2;
         float: left;
+        margin-right: 1em;
         padding-right: 2em;
         min-width: 10em;
         position: relative;
@@ -23,6 +24,9 @@
             right: 0.75em;
             top: 50%;
             margin-top: -0.75em;
+        }
+        &:last-child {
+            margin-right: 0;
         }
     }
 }
